<?xml version="1.0"?>
<package>
  <name>robots_description</name>
  <version>0.0.0</version>
  <description>The robots_description package</description>
  <maintainer email="adam.conkey@gmail.com">Adam Conkey</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export> </export>

</package>
